syntax = "proto3";
package pbJwt;


// =================== (中间件验证是否有效) ====================
message VerificationJWTRequest {
  string Access = 1;  // tag:validate:"required" // JWT*
}

message VerificationJWTResponse {

  enum StateOption{
    NotPass = 0; // 未通过
    Expired = 1; // 已经过期
    ExpiredJump = 2; // 已经过期但执行跳转逻辑
    MultiTerminalLogin = 3 ; // jwt通过但是与redis不一致
    Pass = 4; // 通过
  }
  StateOption  State = 1; // 状态
  int64  Uid = 2; // 用户ID
}


// =================== (刷新JWT) ====================

message VerificationRefreshJWTRequest {
  string Access = 1; // 动态JWT*  // tag:validate:"required"
  string Refresh = 2; // 静态JWT* // tag:validate:"required"
}


message Response {
  // 响应
  int32 Code = 1 ; // 业务响应状态码
  string Msg = 2; // 提示信息
  map<string, string> Data = 3; // 数据
}



// 服务注册
service JWT {
  rpc VerificationRefreshJWT (VerificationRefreshJWTRequest) returns (Response) {}
  rpc VerificationJWT(VerificationJWTRequest)returns(VerificationJWTResponse){}
}
