syntax = "proto3"; // 指定版本
package pbUser;

// =================== (注册) ====================
message RegisterRequest {
  // 注册请求
  string UserName = 1; // 用户名*  // tag:validate:"required,gte=4,lt=20"
  string Password = 2; // 密码* // tag:validate:"required,gte=6,lt=20"
  string ConfirmPassword = 3; // re密码* // tag:validate:"required,eqfield=Password,gte=6,lt=20"
  string UserInfo = 4; // 用户简介
  string Email = 5; // 邮箱* // tag:validate:"required,email"
  string VerificationCode = 6; // 验证码* // tag:validate:"required"
}


// =================== (登录) ====================
message LoginRequest {
  // 登录请求
  string UserName = 1; // 用户名* // tag:validate:"required,gte=4,lt=20"
  string Password = 2; // 密码* // tag:validate:"required,gte=6,lt=20"
}


// ==============(验证码)=============
message VerificationRequest{
  // 验证码
  string Email = 1; // 邮箱* // tag:validate:"required,email"
}


message Response {
  // 响应
  int32 Code = 1 ; // 业务响应状态码
  string Msg = 2; // 提示信息
  map<string, string> Data = 3; // 数据
}


// 服务注册
service User {
  rpc Register (RegisterRequest) returns (Response) {}
  rpc Login (LoginRequest) returns (Response) {}
  rpc Verification(VerificationRequest)returns (Response){}
}

